--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  intl: ^0.15.2
+  intl:
+#  intl: ^0.15.2
   flutter:
     sdk: flutter
   
