--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.example"
+        applicationId "com.elkomy.videochat"
         minSdkVersion 21 //set to 21 if multi-dex error
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
